Added benchmark to measure the impact of JSON deserialization over Event size estimation